# soil-analytics

./: .gitignore  README.md  pyproject.toml
config/reference_ranges/: fesem_remarks.yaml  fesem_wizard.yaml  ftir_bands.yaml  tga_windows.yaml  xrd_peaks.yaml
data/fesem_supervised/: README.md
models/: README.md
models/fesem_supervised/: meta.json
models/fesem_supervised_smoke/: meta.json
scripts/: download_kaggle_dataset.py  fesem_labels.example.csv  generate_fesem_manifest.py  train_fesem_supervised.py
src/lime_analytics/: __init__.py  _signal.py  fesem_mcq.py  paths.py  plots.py  reference_checks.py  report.py  schemas.py  streamlit_readability.py  streamlit_tables.py  xrd_phases.py
src/lime_analytics/parsers/: __init__.py  _io.py  ftir.py  tga.py  xrd.py
src/soil_analytics/: __init__.py  fesem_catalog.py  fesem_mcq.py  fesem_wizard.py  paths.py  plots.py  reference_checks.py  report.py  xrd_phases.py
src/soil_analytics/ml/: __init__.py  fesem_demo_lookup.py  fesem_overlay.py  supervised.py  unsupervised.py
src/soil_analytics/parsers/: __init__.py  ftir.py  tga.py  xrd.py
streamlit_app/: Home.py
streamlit_app/pages/: 1_FTIR.py  2_XRD.py  3_TGA.py  4_FESEM.py  5_About.py
tests/: test_fesem_catalog.py  test_fesem_mcq.py  test_fesem_wizard.py  test_manual_inference.py  test_parsers.py  test_paths.py  test_reference_checks.py  test_report.py  test_signal.py  test_streamlit_tables.py
tests/fixtures/: netzsch_tg_export.csv  sample_ftir.csv  sample_tga.csv  sample_xrd.csv
