[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "soil-analytics"
version = "0.1.0"
description = "Soil analytics: FTIR/XRD/TGA reference checks and FESEM catalog (Streamlit UI)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "pydantic>=2.5",
  "pyyaml>=6.0",
  "streamlit>=1.28",
  "matplotlib>=3.7",
  "Pillow>=10.0",
  "ImageHash>=4.3",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
